test/neg/neg-new_array3.errc
The element type to upcxx::new_array currently may not
